--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,35 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
-body{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+
+@font-face {
+  font-family: "BlackHanSans";
+  src: url("../Fonts/BlackHanSans-Regular.ttf");
 }
-main{
-    flex-grow: 1;
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+main {
+  flex-grow: 1;
+}
+.marca {
+  font-family: "BlackHanSans", sans-serif;
+}
+.img-carousel-crypto{
+    height: 300px;
+    object-fit: cover;
+}
+.carousel-control-prev-icon, .carousel-control-next-icon{
+    filter: none!important;
+}
+@media (min-width: 768px) and (max-width: 991px){
+    .img-carousel-crypto{
+        height: 350px;
+    }
+}
+@media (min-width: 992px){
+    .img-carousel-crypto{
+        height: 500;
+        object-position: 100% 30%;
+}
 }
